tests/ui/async-await/track-caller/async-closure-gate.stderr
error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/async-closure-gate.rs:6:13
   |
LL |     let _ = #[track_caller] async || {
   |             ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/crablang/crablang/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
